# OS

./: README.md
lab2/: child.c  makefile
lab4/: CMakeLists.txt  child.c  main.c
lab5/: CMakeLists.txt  dynamicMain.c  realization1.c  realization2.c  sharedRealization.c  staticMain.c
lab6/: BTree.hpp  CMakeLists.txt  child.cpp  main.cpp  server.hpp
